Code review changes - Automation

--- a/modules/footerTest/resources/views/_banner.html
+++ b/modules/footerTest/resources/views/_banner.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a href="http://labkey.com" target="_blank">Footer : Powered by LabKey - footerTest</a>
+<a href="http://labkey.com" target="_blank">Banner : Powered by LabKey - footerTest</a>
 </body>
 </html>
