--- a/modules/chartingapi/resources/views/exportGenericChartTest.html
+++ b/modules/chartingapi/resources/views/exportGenericChartTest.html
@@ -2,7 +2,7 @@
     <input type="button" id="next-btn" name="next-btn" onclick="nextChart();" value="Next" />
 </div>
 <div id="testDiv"></div>
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
     var data = {
     	"schemaName":"study",
     	"queryName":"Lab Results",
