--- a/modules/scriptpad/resources/views/scriptpad.html
+++ b/modules/scriptpad/resources/views/scriptpad.html
@@ -8,7 +8,7 @@
 <div id='divOutput2'>
 </div>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
 LABKEY.requiresExt4ClientAPI(function() {
     function preparePage()
     {
