--- a/modules/simpletest/resources/views/parameterizedQWP.html
+++ b/modules/simpletest/resources/views/parameterizedQWP.html
@@ -1,5 +1,5 @@
 <div id='queryTestDiv1'></div>
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
     LABKEY.requiresExt3ClientAPI(function() {
         Ext.onReady(function() {
             var qwp1 = new LABKEY.QueryWebPart({
