--- a/modules/chartingapi/resources/views/interactivityTest.html
+++ b/modules/chartingapi/resources/views/interactivityTest.html
@@ -1,5 +1,5 @@
 <div id="testDiv"></div>
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
     LABKEY.requiresVisualization(function(){
         var generateDataForPTID = function(id) {
             var data = [];
