--- a/modules/simpletest/resources/views/model.html
+++ b/modules/simpletest/resources/views/model.html
@@ -1,7 +1,7 @@
 Hooray!
 <p>
 The model row id is: <span id='model.rowid'>not set</span>!
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
     var span = document.getElementById("model.rowid");
     span.innerHTML = LABKEY.ActionURL.getParameter("rowid");
 </script>
