--- a/modules/simpletest/resources/views/vehicle.html
+++ b/modules/simpletest/resources/views/vehicle.html
@@ -1,7 +1,7 @@
 Hooray!
 <p>
 The vehicle row id is: <span id='vehicle.rowid'>not set</span>!
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
     var span = document.getElementById("vehicle.rowid");
     span.innerHTML = LABKEY.ActionURL.getParameter("rowid");
 </script>
